# nrf-radio

./: Cargo.toml
.cargo/: config.toml
src/: main.rs  radio.rs  utils.rs
