[package]
authors = ["Jim Crossley <jim@crossleys.org>"]
edition = "2018"
readme = "README.md"
name = "nrf-radio"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

rubble = { version = "0.0.4", default-features = false }
rubble-nrf5x = { version = "0.0.4", features = ["52840"] }
nrf52840-hal = { version = "0.12", features = ["rt"] }

# this lets you use `cargo fix`!
[[bin]]
name = "nrf-radio"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
