[package]
authors = ["Jim Crossley <jim@crossleys.org>"]
edition = "2018"
readme = "README.md"
name = "nrf-radio"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

rubble = { version = "0.0.4", default-features = false }

embassy-executor = { version = "0.1.0", default-features = false, features = ["defmt", "nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", default-features = false, features = ["defmt", "defmt-timestamp-uptime", "nightly"] }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "nightly", "unstable-pac"] }

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# this lets you use `cargo fix`!
[[bin]]
name = "nrf-radio"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io]
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-time-v0.1.0" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-time-v0.1.0" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-time-v0.1.0" }
